# charts

./: README.md  argus.yaml  index.yaml
.github/workflows/: release.yaml  update-trilium.yaml
charts/trilium-notes/: Chart.yaml  values.yaml
charts/trilium-notes/templates/: gateway.yaml  http-route.yaml  ingress.yaml  statefulset.yaml
trilium-updater/: Cargo.toml
trilium-updater/src/: chart.rs  github.rs  main.rs  read.rs  write.rs
