[package]
name = "trilium-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
indexmap = { version = "1.9.2", features = ["serde"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
tokio = { version = "1.24.1", features = ["full"] }
